--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "type": "module",
   "license": "MIT",
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3"
   },
   "dependencies": {
     "express": "^4.21.0",
     "init": "^0.1.2",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   }
