--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "express": "^4.21.0",
     "init": "^0.1.2",
-    "redis": "^4.7.0",
+    "ioredis": "^5.4.1",
     "socket.io": "^4.8.0",
     "uuid": "^10.0.0"
   }
